# 3d-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log.txt  log01.txt  third_party_software.txt
includes/stb/: CMakeLists.txt  stb_include.c  stb_include.h
resources/: models.json  models_list.json
resources/textures/skybox/: LICENSE.txt
src/: main.cpp
src/application/: Application.cpp  Application.hpp  Types.hpp  main.cpp
src/ecs/components/: Camera.hpp  Gravity.hpp  Renderable.hpp  RigidBody.hpp  Thrust.hpp  Transform.hpp
src/ecs/core/: ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  Coordinator.cpp  Coordinator.hpp  EntityManager.cpp  EntityManager.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  Scene.cpp  Scene.hpp  SceneView.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  Types.hpp
src/ecs/systems/: CameraControlSystem.cpp  CameraControlSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/engine/GUI/: GUIMain.cpp  GUIMain.hpp  GUIWindow.cpp  GUIWindow.hpp
src/engine/GUI/windows/: CameraControlWindow.hpp  LightControlWindow.hpp
src/engine/config/: CameraConfig.hpp  Events.hpp  GUIConfig.hpp  GraphicsConfig.hpp  InputConfig.hpp  Keymap.hpp  ShaderConfig.hpp  WindowConfig.hpp
src/engine/core/: ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  Scene.cpp  Scene.hpp  SceneView.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  Types.hpp
src/engine/ecs/components/: Camera.hpp  Cubemap.hpp  DirectionalLight.hpp  Gravity.hpp  Model.hpp  Player.hpp  PointLight.hpp  PointLightComponent.hpp  Renderable.hpp  RenderableComponent.hpp  RigidBody.hpp  Thrust.hpp  Transform.hpp
src/engine/ecs/configs/: CameraConfigs.hpp
src/engine/ecs/core/: ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp  Scene.cpp  Scene.hpp  SceneView.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  Types.hpp
src/engine/ecs/systems/: CameraControlSystem.cpp  CameraControlSystem.hpp  InputHandler.cpp  InputHandler.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/engine/graphics/: CameraManager.cpp  CameraManager.hpp  CameraWrapper.cpp  CameraWrapper.hpp  LightRenderer.cpp  LightRenderer.hpp  Mesh.cpp  Mesh.hpp  MeshProcessor.cpp  MeshProcessor.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelManager.cpp  ModelManager.hpp  ModelProcessor.cpp  ModelProcessor.hpp  OldAoS_MeshSerDer.cpp  Shader.cpp  Shader.hpp  TestDDSTextures.cpp  TextureManager.cpp  TextureManager.hpp
src/engine/graphics/lib/: GraphicsHelper.cpp  GraphicsHelper.hpp
src/engine/graphics/objects/: CubeObject.hpp  GraphicsObjects.cpp  GraphicsObjects.hpp  QuadObject.hpp
src/engine/graphics/simple-objects/: SkyboxVertices.hpp
src/engine/gui/: GUIMain.cpp  GUIMain.hpp  GUIState.hpp  GUIWindow.cpp  GUIWindow.hpp
src/engine/gui/windows/: CameraControlWindow.hpp  LightControlWindow.hpp
src/engine/input/: InputHandler.cpp  InputHandler.hpp
src/engine/shaders/: cubemap.fs  cubemap.vs  depth_shadow_mapping.fs  depth_shadow_mapping.vs  hdr_quad.fs  hdr_quad.vs  light_cube.fs  light_cube.vs  shader.json  shader_model.fs  shader_model.vs  shader_model_normal.fs  shader_model_normal.hpp  shader_model_normal.vs  shader_pbr.fs  shader_pbr.vs  shader_world_normal.fs  shader_world_normal.vs  vertex.vs
src/engine/shaders/include/: config.glsl  data_types.glsl  pbr_functions.glsl  ub_camera.glsl  ub_gui_state.glsl  ub_matrices.glsl  uniform_blocks.glsl
src/engine/shaders/interface/: ShaderDataTypes.hpp  ShaderUniformBlocks.hpp
src/engine/systems/: CameraControlSystem.cpp  CameraControlSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerControlSystem.cpp  PlayerControlSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/engine/window/: WindowManager.cpp  WindowManager.hpp
src/graphics/: Shader.cpp  Shader.hpp
src/lib/: SimpleVector.h  SimpleVector.hpp
src/lib/math/: Mat44.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
src/lib/simple-vector/: SimpleVector.hpp
src/lib/utilities/: DebugAssert.hpp
src/shaders/: fragment.glsl
src/window/: WindowManager.cpp  WindowManager.hpp
